--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -36,8 +36,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/languages/javascript.min.js" type="text/javascript"></script>
 </head>
 <body>
-<br>
-<h1>eg.Flicking demo</h1>
+<h1 style="margin-top:15px"><img src="https://avatars3.githubusercontent.com/u/15993327?v=3&s=90" style="vertical-align:middle"> Flicking demo</h1>
 
 <h2>HTML outline example</h2>
 <pre><code class="xml"> &lt;!-- wrapper ---->
