change redirect to javascript

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
 	<title>egjs.github.io</title>
-	<meta http-equiv="refresh" content="0;URL='http://egis.github.io/main/'" />
+	<script>
+		location.href="http://egjs.github.io/main/";
+	</script>
 </head>
 <body>
 </body>
