--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -50,7 +50,19 @@
 	Flicking demo
 </h1>
 
-<h2>HTML outline example</h2>
+<h2>Quick steps to use:</h2>
+
+<h3>1) Load files</h3>
+
+<pre><code class="xml">  &lt;!-- 1) Load jQuery -->
+ &lt;script src="https://code.jquery.com/jquery-1.11.3.min.js">&lt;/script>
+
+ &lt;!-- 2) Load egjs
+       All-in-one file merged with dependencies(Hammer.js + egjs components) -->
+ &lt;script src="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js">&lt;/script>
+</code></pre>
+
+<h3>2) Set up your HTML</h3>
 <pre><code class="xml"> &lt;!-- wrapper ---->
  &lt;div id="wrapper">
 	&lt;!-- panels ---->
@@ -65,9 +77,7 @@
 	&lt;/div>
  &lt;/div></code></pre>
 
-<hr size="1">
-
-<h2>Quick start</h2>
+<h3>3) Initialize it and all done!</h3>
 
 <h4>Two ways of using eg.Flicking</h4>
 
@@ -106,6 +116,8 @@
 </code></pre><br>
 
 <hr size="1">
+
+<h1>Check out more examples!</h1>
 
 <h2>Horizontal direction</h2>
 
@@ -399,9 +411,9 @@ function handler(e) {
 }
 
 // Horizontal direction
-//var f1 = new eg.Flicking("#mflick1");
-var f1 = $("#mflick1").flicking();
-
+var f1 = new eg.Flicking("#mflick1");
+/*$("#mflick1").flicking();
+var f1 = $("#mflick1").flicking("instance");*/
 
 var f2 = new eg.Flicking("#mflick2", {
 	duration: 300,
