added urls at the top

--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -50,6 +50,8 @@
 	Flicking demo
 </h1>
 
+<a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/">API documentation</a> | <a href="http://egjs.github.io/latest/dist/">download</a>
+
 <h2>Quick steps to use:</h2>
 
 <h3>1) Load files</h3>
