--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -2,11 +2,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi">
-	<title>egjs: Flicking component demo</title>
+	<title>Flicking demo - egjs</title>
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,900' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300' rel='stylesheet' type='text/css'>
 	<style>
-		body,pre{margin:0 auto}.bold,button{font-weight:700}.eg-flick-panel p,.vbutton{text-align:center}body{padding:0 10px;font-family:Raleway,sans-serif;background-color:ivory;min-width:320px;max-width:800px}.hljs{font-family:'Work Sans',sans-serif;font-size:13px;border-radius:10px;border:5px solid #0ff}h4{margin-bottom:0}hr{margin:30px auto;width:90%}.flick{height:50px;background-color:grey;margin:0 auto}.eg-flick-container>div{height:100%;float:left;display:block}.eg-flick-panel p{margin:0;font-size:2em}.vertical{height:130px}.vertical p{font-size:2.3em;margin-top:36px}#log{height:78px;overflow-y:scroll;background-color:#eee;margin-bottom:10px;padding-left:10px}.red{color:red}.f_right{float:right}button{border-radius:20px;margin:3px;height:22px;font-size:10px;border:2px solid #B7B5B5;background-color:#fff;position:relative;z-index:2001;top:-40px;cursor:pointer;color:#B7B5B5}.vbutton button{top:-15px}
+		body,pre{margin:0 auto}.bold,button{font-weight:700}.eg-flick-panel p,.vbutton{text-align:center}body{padding:0 10px;font-family:Raleway,sans-serif;background-color:ivory;min-width:300px;max-width:800px}.hljs{font-family:'Work Sans',sans-serif;font-size:13px;border-radius:10px;border:5px solid #0ff}h4{margin-bottom:0}hr{margin:30px auto;width:90%}.flick{height:50px;background-color:grey;margin:0 auto}.eg-flick-container>div{height:100%;float:left;display:block}.eg-flick-panel p{margin:0;font-size:2em}.vertical{height:130px}.vertical p{font-size:2.3em;margin-top:36px}#log{height:78px;overflow-y:scroll;background-color:#eee;margin-bottom:10px;padding-left:10px}.red{color:red}.f_right{float:right}button{border-radius:20px;margin:3px;height:22px;font-size:10px;border:2px solid #B7B5B5;background-color:#fff;position:relative;z-index:2001;top:-40px;cursor:pointer;color:#B7B5B5}.vbutton button{top:-15px}
 
 		/* for github fork ribbon */
 		.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
@@ -15,7 +15,7 @@
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<!-- All-in-one eg.Flicking with dependency files -->
-	<script src="https://cdn.rawgit.com/egjs/egjs.github.io/master/0.0.3/dist/pkgd/flicking.pkgd.min.js"></script>
+	<script src="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js"></script>
 
 	<!--
 		To load each file separately:
@@ -51,6 +51,10 @@
 </h1>
 
 <a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/">API documentation</a> | <a href="http://egjs.github.io/latest/dist/">download</a>
+
+<h2>Browser support</h2>
+
+IE 10+ (possible 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.3+ (except 3.x)
 
 <h2>Quick steps to use:</h2>
 
