--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -56,7 +56,7 @@
 
 <h2>Browser support</h2>
 
-IE 10+ (possible 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.3+ (except 3.x)
+IE 10+ (possibly 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.3+ (except 3.x)
 
 <h2>Quick steps to use:</h2>
 
