changed condition of logging custom events

--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -423,7 +423,7 @@ function handler(e) {
 	}
 
 	log.html((count++) +": <span class=red>"+ e.eventType +"</span> event fired.<br>"+ log.html());
-	handler.end = ~e.eventType.indexOf("flickEnd");
+	handler.end = /^(flickEnd|restore)$/.test(e.eventType);
 }
 
 // Horizontal direction
