Added download property to make downloadable

--- a/main/index.html
+++ b/main/index.html
@@ -78,7 +78,7 @@
             <hr>
             <p class="desc"><span>&nbsp;A set of UI interactions, effects and&nbsp;<br>
             &nbsp;utilities components library using jQuery&nbsp;</span></p>
-            <a href="http://egjs.github.io/latest/dist/eg.min.js" class="btn btn-primary btn-xl page-scroll">Download v1.0.0</a>&nbsp;&nbsp;&nbsp;
+            <a href="http://egjs.github.io/latest/dist/eg.min.js" class="btn btn-primary btn-xl page-scroll" download>Download v1.0.0</a>&nbsp;&nbsp;&nbsp;
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
