update link on api doc

--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -52,7 +52,7 @@
 	Flicking demo
 </h1>
 
-<a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/eg.Flicking.html">API documentation</a> |
+<a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/eg.Flicking.html?en">API documentation</a> |
 <a href="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js" download>download</a>
 
 <h2>Browser support</h2>
