updated to use latest version of eg

--- a/main/index.html
+++ b/main/index.html
@@ -76,7 +76,7 @@
             <hr>
             <p class="desc"><span>&nbsp;A set of UI interactions, effects and&nbsp;<br>
             &nbsp;utilities components library using jQuery&nbsp;</span></p>
-            <a href="http://egjs.github.io/latest/dist/eg.min.js" class="btn btn-primary btn-xl page-scroll" download>Download v1.0.0</a>&nbsp;&nbsp;&nbsp;
+            <a href="http://egjs.github.io/latest/dist/eg.min.js" class="btn btn-primary btn-xl page-scroll" download>Download v<span id="version"></span></a>&nbsp;&nbsp;&nbsp;
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
@@ -322,8 +322,12 @@
 <script src="js/jquery.fittext.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
-<script src="js/eg.min.js"></script>
+<script src="http://egjs.github.io/latest/dist/eg.min.js"></script>
 <script src="js/creative.js"></script>
+<script>
+  $(function(){
+    $("#version").html(eg.VERSION);
+  });
+</script>
 </body>
-
 </html>
