--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -38,6 +38,17 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/languages/javascript.min.js" type="text/javascript"></script>
 </head>
 <body>
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s); js.id = id;
+	js.src = "http://connect.facebook.net/en/sdk.js#xfbml=1&version=v2.5";
+	console.log(js.src)
+	fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <h1 style="margin-top:15px">
 	<svg width="100px" height="100px" viewBox="0 0 181 181" version="1.1" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle">
 		<path fill="#fffff0" d=" M 0.00 0.00 L 181.00 0.00 L 181.00 181.00 L 0.00 181.00 L 0.00 0.00 Z" />
@@ -49,11 +60,15 @@
 		<path fill="#ffffff" d=" M 117.15 67.31 C 121.57 67.30 125.99 67.30 130.41 67.32 C 130.46 81.23 130.42 95.14 130.44 109.05 C 130.33 113.66 129.66 118.82 126.06 122.11 C 122.26 125.56 116.76 125.81 111.89 125.95 C 110.55 121.87 109.08 117.83 107.80 113.74 C 110.32 113.40 113.19 113.74 115.33 112.09 C 117.25 109.89 117.10 106.78 117.16 104.05 C 117.13 91.81 117.14 79.56 117.15 67.31 Z" />
 		<path fill="#1f4e79" d=" M 32.49 82.53 C 34.96 80.51 37.70 78.41 41.06 78.46 C 44.81 78.09 48.09 80.17 50.79 82.52 C 44.69 82.60 38.59 82.59 32.49 82.53 Z" />
 	</svg>
-	Flicking demo
+	Flicking
 </h1>
 
-<a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/eg.Flicking.html?en">API documentation</a> |
-<a href="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js" download>download</a>
+<p>
+	<a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/eg.Flicking.html?en">API documentation</a> |
+	<a href="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js" download>download</a>
+</p>
+
+<div class="fb-like" data-href="http://egjs.github.io/demo/flicking.html" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 
 <h2>Browser support</h2>
 
