--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<meta name="description" content="egjs: Build flickable UI easily and instantaneously.">
 
-	<title>Flicking demo - egjs</title>
+	<title>egjs Flicking: Build flickable UI easily and instantaneously!</title>
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,900' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300' rel='stylesheet' type='text/css'>
 	<style>
