changed script http protocol to https

--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -18,7 +18,7 @@
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<!-- All-in-one eg.Flicking with dependency files -->
-	<script src="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js"></script>
+	<script src="https://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js"></script>
 
 	<!--
 		To load each file separately:
@@ -45,7 +45,7 @@
 	var js, fjs = d.getElementsByTagName(s)[0];
 	if (d.getElementById(id)) return;
 	js = d.createElement(s); js.id = id;
-	js.src = "http://connect.facebook.net/en/sdk.js#xfbml=1&version=v2.5";
+	js.src = "https://connect.facebook.net/en/sdk.js#xfbml=1&version=v2.5";
 	console.log(js.src)
 	fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
