add github buttons

--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -13,6 +13,9 @@
 
 		/* for github fork ribbon */
 		.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
+
+		/* github button */
+		.gitbtn{width:75px;height:20px;margin:-3px 0 0 5px;vertical-align:middle}
 	</style>
 
 	<!-- jQuery -->
@@ -70,6 +73,8 @@
 </p>
 
 <div class="fb-like" data-href="http://egjs.github.io/demo/flicking.html" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=star&count=true" frameborder="0" scrolling="0" class="gitbtn"></iframe>
+<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=fork&count=true" frameborder="0" scrolling="0" class="gitbtn"></iframe>
 
 <h2>Browser support</h2>
 
