changed github button style

--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -15,7 +15,7 @@
 		.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}
 
 		/* github button */
-		.gitbtn{width:85px;height:20px;margin-top:-3px;vertical-align:middle}
+		.gitbtn{width:50%;height:20px;float: left;}
 	</style>
 
 	<!-- jQuery -->
@@ -71,9 +71,10 @@
 	<a href="http://egjs.github.io/">homepage</a> | <a href="http://egjs.github.io/latest/doc/eg.Flicking.html?en">API documentation</a> |
 	<a href="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js" download>download</a>
 </p>
-
-<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=star&count=true" frameborder="0" scrolling="0" class="gitbtn"></iframe>
-<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=fork&count=true" frameborder="0" scrolling="0" class="gitbtn" style="margin-right:5px"></iframe>
+<div style="width:170px">
+	<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=star&count=true" frameborder="0" scrolling="0" class="gitbtn"></iframe>
+	<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=fork&count=true" frameborder="0" scrolling="0" class="gitbtn" style="margin-right:5px"></iframe>
+</div>
 <div class="fb-like" data-href="http://egjs.github.io/demo/flicking.html" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 
 <h2>Browser support</h2>
