--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -73,7 +73,7 @@
 </p>
 <div style="width:170px">
 	<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=star&count=true" frameborder="0" scrolling="0" class="gitbtn"></iframe>
-	<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=fork&count=true" frameborder="0" scrolling="0" class="gitbtn" style="margin-right:5px"></iframe>
+	<iframe src="https://ghbtns.com/github-btn.html?user=egjs&repo=egjs&type=fork&count=true" frameborder="0" scrolling="0" class="gitbtn"></iframe>
 </div>
 <div class="fb-like" data-href="http://egjs.github.io/demo/flicking.html" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 
