--- a/demo/flicking.html
+++ b/demo/flicking.html
@@ -90,7 +90,7 @@ IE 10+ (possibly 9 also), latest of Chrome/FF/Safari, iOS 7+ and Android 2.3+ (e
 
  &lt;!-- 2) Load egjs
        All-in-one file merged with dependencies(Hammer.js + egjs components) -->
- &lt;script src="http://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js">&lt;/script>
+ &lt;script src="https://egjs.github.io/latest/dist/pkgd/flicking.pkgd.min.js">&lt;/script>
 </code></pre>
 
 <h3>2) Set up your HTML</h3>
