update repository path

--- a/main/index.html
+++ b/main/index.html
@@ -127,7 +127,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <div class="outlink">
-                    <a href="https://github.com/egjs/egjs/wiki/Download-and-Using-egjs/" class="btn btn-default btn-xl">Get Started!</a>&nbsp;&nbsp;&nbsp;
+                    <a href="https://github.com/naver/egjs/wiki/Download-and-Using-egjs/" class="btn btn-default btn-xl">Get Started!</a>&nbsp;&nbsp;&nbsp;
                     <a href="http://codepen.io/egjs/" class="btn btn-default btn-xl">DEMO</a>&nbsp;&nbsp;&nbsp;
                     <a href="http://egjs.github.io/latest/doc/" class="btn btn-default btn-xl">API Document</a>
                 </div>
@@ -260,7 +260,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/egjs/" class="portfolio-box">
+                <a href="https://github.com/naver/egjs/" class="portfolio-box">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -272,7 +272,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/egjs/egjs-experiment/" class="portfolio-box">
+                <a href="https://github.com/naver/egjs-experiment/" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -284,7 +284,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://github.com/egjs/egjs-cli/" class="portfolio-box">
+                <a href="https://github.com/naver/egjs-cli/" class="portfolio-box">
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -308,9 +308,9 @@
                 <p>Ready to start your next project with us? That's great! Please join with GitHub!</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="https://github.com/egjs/egjs">
+                <a href="https://github.com/naver/egjs/">
                 <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>https://github.com/egjs/egjs</p>
+                    <p>https://github.com/naver/egjs</p>
                 </a>
             </div>
         </div>
