--- a/deview2017/test.html
+++ b/deview2017/test.html
@@ -111,7 +111,7 @@
     .container {
       margin-top: 20px;
       padding: 0px;
-      width: 600px;
+      width: 300px;
       border: 1px solid #e1e1e8;
       background: #f7f7f9;
     }
@@ -140,7 +140,7 @@
     }
     #tools {
       background: #ffce00;
-      padding: 10px;
+      padding: 0px;
       display: inline-block;
       text-align: center;
     }
@@ -150,9 +150,9 @@
       margin-left: -1px;
       z-index: 1;
       color: white;
-      width: 171px;
-      margin: 10px;
-      padding: 10px 0px;
+      width: 138px;
+      margin: 5px;
+      padding: 5px 0px;
       border-radius: 10px;
       background: #8c532e;
     }
@@ -270,7 +270,7 @@
       <h3>핸드폰으로 QR 코드를 찍어주세요</h3>
     </div> -->
     <div>
-      <div style="padding:10px; text-align:center; background:#333; color:white">
+      <div style="padding:10px 0px; text-align:center; background:#333; color:white">
         <h2 id="case">사용한 egjs 컴포넌트를 선택해주세요</h2>
       </div>
       <div id="tools">
